resolve conflicts code with sonar